# Hello_Django

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
app_auth/: apps.py  signals.py
app_auth/api/: permissions.py  serializers.py  urls.py  views.py
app_base/: admin.py  forms.py  urls.py  views.py
app_base/api/: scheme.py  serializers.py
app_blogs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app_blogs/api/: filters.py  scheme.py  serializers.py  urls.py  views.py
app_blogs/migrations/: 0002_alter_post_options.py  0003_post_author_comment.py  0004_post_is_published.py  0005_alter_post_managers_post_views.py  0006_alter_comment_options_alter_comment_post.py  0007_category_post_category.py  0008_alter_post_managers.py  0009_alter_comment_author_alter_post_author.py  0010_tag_post_tag.py  0011_rename_tag_tags_rename_tag_post_tags.py  0012_alter_category_table_alter_comment_table_and_more.py  0013_alter_category_table_alter_comment_table_and_more.py  0014_alter_post_tags_delete_posttags.py  0017_alter_comment_post.py  (+4 more)
app_files/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app_users/: apps.py  forms.py  models.py  urls.py  views.py
blog_app/: models.py  urls.py  views.py
django_app/: models.py  urls.py  views.py
django_config/: settings.py  urls.py
templates/: _base.html  about.html  base.html  index.html  old_user_profile.html  profile.html  user_profile.html  users_all_profiles.html
tests/: conftest.py  test_routes.py  test_serializers.py
(+102 files in other folders)
